src/test/ui/use/use-after-move-implicity-coerced-object.nll.stderr
error[E0382]: borrow of moved value: `n`
  --> $DIR/use-after-move-implicity-coerced-object.rs:38:13
   |
LL |     l.push(n);
   |            - value moved here
LL |     let x = n.to_string();
   |             ^ value borrowed here after move
   |
   = note: move occurs because `n` has type `std::boxed::Box<Number>`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
